Add stylelint config

--- a/src/less/mixins/fonts.less
+++ b/src/less/mixins/fonts.less
@@ -9,12 +9,7 @@
 .font-face(@font-family, @file-path, @font-weight, @font-style) {
   @font-face {
     font-family: @font-family;
-    src: url('@{file-path}.eot');
-    src: url('@{file-path}.woff') format('woff'),
-      url('@{file-path}.woff2') format('woff2'),
-      url('@{file-path}.otf') format('opentype'),
-      url('@{file-path}.ttf') format('truetype'),
-      url('@{file-path}.svg#@{file-path}') format('svg');
+    src: url('@{file-path}.ttf') format('truetype');
     font-weight: @font-weight;
     font-style: @font-style;
   }
