--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -7,13 +7,17 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
 
     <title>
-        Template
+        Blog
     </title>
 </head>
 
 <body>
-    <p class="class">Class 2</p>
-    <div id="app"></div>
+    <header class="header">
+        <div class="header__content">
+            <img src="../images/main__image.jpg" alt="main__image" class="header__image">
+            <span class="header__title">Osipov Sergey</span>
+        </div>
+    </header>
 </body>
 
 </html>
