Add header and styles for him

--- a/src/less/mixins/colors.less
+++ b/src/less/mixins/colors.less
@@ -1,5 +1,9 @@
-@black : #000000;
-@green : #00FF00;
-@white : #FFFFFF;
-@blue  : #0000FF;
-@red   : #FF0000;
+/*
+    bc -- background-color;
+    c -- color;
+*/
+
+@section: #fcfcfc;
+@shadow: #e0e0e0;
+@border: #d4d4d4;
+@text-navigation: #202124;
