--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -15,14 +15,13 @@
     <header class="header">
         <div class="header__content">
             <img src="../images/main__image.jpg" alt="main__image" class="header__image">
-            <span class="header__title">Osipov Sergey</span>
+            <span class="header__title">Осипов Сергей</span>
             <span class="header__desc">Front-end developer</span>
         </div>
         <nav class="header__navigation">
             <div class="header__navigation__items">
-                <a href="#" class="header__navigation__item">Обо мне</a>
-                <a href="#" class="header__navigation__item">Сделал</a>
-                <a href="#" class="header__navigation__item">Интересные ссылки</a>
+                <a href="#" class="header__navigation__item">Что-то обо мне</a>
+                <a href="#" class="header__navigation__item">Что-то сделал</a>
             </div>
         </nav>
     </header>
