Add main section

--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -20,12 +20,30 @@
         </div>
         <nav class="header__navigation">
             <div class="header__navigation__items">
-                <a href="#" class="header__navigation__item">Что-то обо мне</a>
-                <a href="#" class="header__navigation__item">Что-то сделал</a>
+                <a href="#bio" class="header__navigation__item">Что-то обо мне</a>
+                <a href="#projects" class="header__navigation__item">Что-то сделал</a>
             </div>
         </nav>
     </header>
-
+    <main class="main">
+        <article class="main__section" id="bio">
+            <section class="main__content">
+                <span class="main__title">Кое-что обо мне</span>
+                <p class="main__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam quasi dolorum laudantium similique accusantium, asperiores nulla aspernatur excepturi itaque nesciunt repudiandae quaerat minima iure corporis, adipisci fugit ex aliquid.
+                    Accusantium!
+                </p>
+            </section>
+        </article>
+        <article class="main__section" id="projects">
+            <section class="main__content">
+                <span class="main__title">Кое-что сделал</span>
+                <p class="main__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam quasi dolorum laudantium similique accusantium, asperiores nulla aspernatur excepturi itaque nesciunt repudiandae quaerat minima iure corporis, adipisci fugit ex aliquid.
+                    Accusantium!
+                </p>
+            </section>
+            <!-- <div id="list-projects"></div> -->
+        </article>
+    </main>
 </body>
 
 </html>
