--- a/src/less/styles/main.less
+++ b/src/less/styles/main.less
@@ -6,6 +6,7 @@
     background-color: @section;
     box-shadow: 0px 0px 11px 0px @shadow;
     padding: 12px 6px;
+    margin-bottom: 24px;
     border-radius: 10px;
 
     &__content {
@@ -25,12 +26,12 @@
 
     &__title {
         padding-bottom: 6px;
-        .font('Raleway-Thin', 24px, normal, normal);
+        .font('Raleway-Thin', 24px, 600, normal);
     }
 
     &__desc {
         display: flex;
-        .font('Raleway-Thin', 18px, 200, normal);
+        .font('Raleway-Thin', 18px, 600, normal);
     }
 
     &__navigation {
@@ -61,5 +62,28 @@
                 margin: 12px;
             });
         }
+    }
+}
+
+.main {
+
+    &__section {
+        background-color: @section;
+        box-shadow: 0px 0px 11px 0px @shadow;
+        padding: 12px 6px;
+        margin-bottom: 24px;
+        border-radius: 10px;
+    }
+
+    &__title {
+        padding-bottom: 6px;
+        text-align: center;
+        text-decoration: underline;
+        .font('Raleway-Thin', 24px, 600, normal);
+    }
+
+    &__text {
+        display: flex;
+        .font('Raleway-Thin', 18px, 200, normal);
     }
 }
