--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -13,17 +13,19 @@
 
 <body>
     <header class="header">
-        <div class="header__content">
+        <div class="header__wrapper">
             <img src="../images/main__image.jpg" alt="main__image" class="header__image">
-            <span class="header__title">Осипов Сергей</span>
-            <span class="header__desc">Front-end developer</span>
-        </div>
-        <nav class="header__navigation">
-            <div class="header__navigation__items">
-                <a href="#bio" class="header__navigation__item">Что-то обо мне</a>
-                <a href="#projects" class="header__navigation__item">Что-то сделал</a>
+            <div class="header__content-text">
+                <span class="header__title">Осипов Сергей</span>
+                <span class="header__desc">Front-end developer</span>
             </div>
-        </nav>
+            <nav class="header__navigation">
+                <div class="header__navigation__items">
+                    <a href="#bio" class="header__navigation__item">Кое-что обо мне</a>
+                    <a href="#projects" class="header__navigation__item">Кое-что сделал</a>
+                </div>
+            </nav>
+        </div>
     </header>
     <main class="main">
         <article class="main__section" id="bio">
