Add components for list_projects

--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -39,11 +39,9 @@
         <article class="main__section" id="projects">
             <section class="main__content">
                 <span class="main__title">Кое-что сделал</span>
-                <p class="main__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam quasi dolorum laudantium similique accusantium, asperiores nulla aspernatur excepturi itaque nesciunt repudiandae quaerat minima iure corporis, adipisci fugit ex aliquid.
-                    Accusantium!
-                </p>
+                <div id="list_projects"></div>
             </section>
-            <!-- <div id="list-projects"></div> -->
+
         </article>
     </main>
 </body>
