Add styles for list_projects

--- a/src/less/styles/main.less
+++ b/src/less/styles/main.less
@@ -78,20 +78,24 @@
     &__section {
         background-color: @section;
         box-shadow: 0px 0px 11px 0px @shadow;
-        padding: 12px 6px;
+        padding: 12px;
         margin-bottom: 24px;
         border-radius: 10px;
     }
 
+    &__content {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
     &__title {
-        padding-bottom: 6px;
+        margin-bottom: 24px;
         text-align: center;
         text-decoration: underline;
-        .font('Raleway-Thin', 24px, 600, normal);
+        .font('Raleway-Thin', 28px, 600, normal);
     }
 
     &__text {
-        display: flex;
         .font('Raleway-Thin', 18px, 200, normal);
     }
 }
