--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -44,6 +44,15 @@
 
         </article>
     </main>
+    <footer class="footer">
+        <article class="social" id="social">
+            <a href="https://github.com/osipovsergey"><img src="../images/icons/github.svg" alt="github" class="social__icon"></a>
+            <a href="https://twitter.com/osipov__s"><img src="../images/icons/twitter.svg" alt="twitter" class="social__icon"></a>
+        </article>
+        <article class="metric" id="social">
+            <span class="metric__text">Какие-либо метрики на сайте отсутствуют.</span>
+        </article>
+    </footer>
 </body>
 
 </html>
