--- a/src/less/styles/main.less
+++ b/src/less/styles/main.less
@@ -37,7 +37,7 @@
     }
 
     &__desc {
-        display: flex;
+        margin: 0 auto;
         .font('Raleway-Thin', 18px, 600, normal);
     }
 
@@ -112,7 +112,7 @@
 
 .social {
     display: flex;
-    margin-bottom: 18px;
+    margin-bottom: 12px;
     justify-content: center;
 
     &__icon {
@@ -124,10 +124,11 @@
 
 .metric {
     display: flex;
-    margin-bottom: 18px;
+    margin-bottom: 12px;
 
     &__text {
         margin: auto;
+        text-align: center;
         .font('Raleway-Thin', 18px, 200, normal);
     }
 }
