Add tags h1 and h2

--- a/src/less/styles/main.less
+++ b/src/less/styles/main.less
@@ -33,6 +33,7 @@
 
     &__title {
         padding-bottom: 6px;
+        margin: 0;
         .font('Raleway-Thin', 24px, 600, normal);
     }
 
@@ -89,7 +90,7 @@
     }
 
     &__title {
-        margin-bottom: 24px;
+        margin: 0 0 24px;
         text-align: center;
         text-decoration: underline;
         .font('Raleway-Thin', 28px, 600, normal);
