--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -16,8 +16,8 @@
         <div class="header__wrapper">
             <img src="../images/main__image.jpg" alt="main__image" class="header__image">
             <div class="header__content-text">
-                <span class="header__title">Осипов Сергей</span>
-                <span class="header__desc">Front-end developer</span>
+                <h1 class="header__title">Осипов Сергей</h1>
+                <h2 class="header__desc">Front-end developer</h2>
             </div>
             <nav class="header__navigation">
                 <div class="header__navigation__items">
@@ -29,19 +29,18 @@
     </header>
     <main class="main">
         <article class="main__section" id="bio">
+            <h2 class="main__title">Кое-что обо мне</h2>
             <section class="main__content">
-                <span class="main__title">Кое-что обо мне</span>
                 <p class="main__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam quasi dolorum laudantium similique accusantium, asperiores nulla aspernatur excepturi itaque nesciunt repudiandae quaerat minima iure corporis, adipisci fugit ex aliquid.
                     Accusantium!
                 </p>
             </section>
         </article>
         <article class="main__section" id="projects">
+            <h2 class="main__title">Кое-что сделал</h2>
             <section class="main__content">
-                <span class="main__title">Кое-что сделал</span>
                 <div id="list_projects"></div>
             </section>
-
         </article>
     </main>
     <footer class="footer">
