--- a/src/less/styles/main.less
+++ b/src/less/styles/main.less
@@ -86,7 +86,7 @@
 
     &__content {
         display: flex;
-        flex-wrap: wrap;
+        flex-flow: column wrap;
     }
 
     &__title {
@@ -97,7 +97,8 @@
     }
 
     &__text {
-        .font('Raleway-Thin', 18px, 200, normal);
+        margin: 12px 0;
+        .font('Raleway-Thin', 20px, 200, normal);
     }
 }
 
