--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -31,8 +31,24 @@
         <article class="main__section" id="bio">
             <h2 class="main__title">Кое-что обо мне</h2>
             <section class="main__content">
-                <p class="main__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam quasi dolorum laudantium similique accusantium, asperiores nulla aspernatur excepturi itaque nesciunt repudiandae quaerat minima iure corporis, adipisci fugit ex aliquid.
-                    Accusantium!
+                <p class="main__text">
+                    Привет!<br/> Нужно кое-что рассказать о себе.
+                </p>
+                <p class="main__text">
+                    Поскольку Интернет позволил нам не чувствовать границ мира, всё же нужно сказать, что живу в Орле.
+                </p>
+                <p class="main__text">
+                    <b>С чем я работал или работаю?</b><br/><br/> > HTML 5;<br/> > CSS (LESS);<br/> > Vanilla JS;<br/> > VueJS;<br/> > Webpack;<br/> > Gulp;<br/> > Template Toolkit;<br/><br/> Постигаю написание тестов на JEST.<br/> Имею опыт работы с
+                    Figma и Photoshop.<br/>
+                </p>
+                <p class="main__text">
+                    Слежу за новостями в сфере дизайна и всё, что с ним связано. Это помогает мне быстро находить общий язык с дизайнерами и лучше понимать макет страницы.<br/> Читаю статьи по различным технологиям.
+                </p>
+                <p class="main__text">
+                    <b>Стоит рассказать о хобби.</b><br/><br/> Люблю фотографировать на мобильный телефон и на фотоаппарат, послушать классную музыку и поиграть в PlayStation.<br/> Коллекционирую открытки из городов, которые я посещал.
+                </p>
+                <p class="main__text">
+                    <b>О работе.</b><br/><br/> Работаю верстальщиком в REG.RU.
                 </p>
             </section>
         </article>
