Add text for eng level

--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -45,7 +45,8 @@
                     Слежу за новостями в сфере дизайна и всё, что с ним связано. Это помогает мне быстро находить общий язык с дизайнерами и лучше понимать макет страницы.<br/> Читаю статьи по различным технологиям.
                 </p>
                 <p class="main__text">
-                    <b>Стоит рассказать о хобби.</b><br/><br/> Люблю фотографировать на мобильный телефон и на фотоаппарат, послушать классную музыку и поиграть в PlayStation.<br/> Коллекционирую открытки из городов, которые я посещал.
+                    <b>Стоит рассказать о хобби.</b><br/><br/> Люблю фотографировать на мобильный телефон и на фотоаппарат, послушать классную музыку и поиграть в PlayStation.<br/> Коллекционирую открытки из городов, которые я посещал.<br/>В свободное
+                    время перевожу статьи на <a class="main__link" href="https://wiki.developer.mozilla.org/ru/">MDN</a>.
                 </p>
                 <p class="main__text">
                     <b>О работе.</b><br/><br/> Работаю верстальщиком в REG.RU.
