--- a/src/less/styles/main.less
+++ b/src/less/styles/main.less
@@ -100,6 +100,12 @@
         margin: 12px 0;
         .font('Raleway-Thin', 20px, 200, normal);
     }
+
+    &__link {
+        color: @text-navigation;
+        text-decoration: underline;
+        text-decoration-color: @border;
+    }
 }
 
 .footer {
