Add text for eng level

--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -49,6 +49,9 @@
                     время перевожу статьи на <a class="main__link" href="https://wiki.developer.mozilla.org/ru/">MDN</a>.
                 </p>
                 <p class="main__text">
+                    <b>Английский.</b><br/><br/> Свободно читаю статьи на английском языке, смотрю фильмы и видео с субтитрами.
+                </p>
+                <p class="main__text">
                     <b>О работе.</b><br/><br/> Работаю верстальщиком в REG.RU.
                 </p>
             </section>
