--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -68,6 +68,7 @@
             <a href="https://github.com/osipovsergey"><img src="../images/icons/github.svg" alt="github" class="social__icon"></a>
             <a href="https://twitter.com/osipov__s"><img src="../images/icons/twitter.svg" alt="twitter" class="social__icon"></a>
             <a href="https://www.instagram.com/osipov__s"><img src="../images/icons/instagram.svg" alt="instagram" class="social__icon"></a>
+            <a href="mailto:osipovsergei97@gmail.com"><img src="../images/icons/mail.svg" alt="mail" class="social__icon"></a>
         </article>
         <article class="metric" id="social">
             <span class="metric__text">Какие-либо метрики на сайте отсутствуют.</span>
