--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -14,11 +14,13 @@
 <body>
     <header class="header">
         <div class="header__wrapper">
-            <img src="../images/main__image.jpg" alt="main__image" class="header__image">
-            <div class="header__content-text">
-                <h1 class="header__title">Осипов Сергей</h1>
-                <h2 class="header__desc">Front-end developer</h2>
-            </div>
+            <article class="header__bio">
+                <img src="../images/main__image.jpg" alt="main__image" class="header__image">
+                <div class="header__content-text">
+                    <h1 class="header__title">Осипов Сергей</h1>
+                    <h2 class="header__desc">Front-end developer</h2>
+                </div>
+            </article>
             <nav class="header__navigation">
                 <div class="header__navigation__items">
                     <a href="#bio" class="header__navigation__item">Кое-что обо мне</a>
@@ -28,51 +30,55 @@
         </div>
     </header>
     <main class="main">
-        <article class="main__section" id="bio">
-            <h2 class="main__title">Кое-что обо мне</h2>
-            <section class="main__content">
-                <p class="main__text">
-                    Привет!<br/> Нужно кое-что рассказать о себе.
-                </p>
-                <p class="main__text">
-                    Поскольку Интернет позволил нам не чувствовать границ мира, всё же нужно сказать, что живу в Орле.
-                </p>
-                <p class="main__text">
-                    <b>С чем я работал или работаю?</b><br/><br/> > HTML 5;<br/> > CSS (LESS);<br/> > Vanilla JS;<br/> > VueJS;<br/> > Webpack;<br/> > Gulp;<br/> > Template Toolkit;<br/><br/> Постигаю написание тестов на JEST.<br/> Имею опыт работы с
-                    Figma и Photoshop.<br/>
-                </p>
-                <p class="main__text">
-                    Слежу за новостями в сфере дизайна и всё, что с ним связано. Это помогает мне быстро находить общий язык с дизайнерами и лучше понимать макет страницы.<br/> Читаю статьи по различным технологиям.
-                </p>
-                <p class="main__text">
-                    <b>Стоит рассказать о хобби.</b><br/><br/> Люблю фотографировать на мобильный телефон и на фотоаппарат, послушать классную музыку и поиграть в PlayStation.<br/> Коллекционирую открытки из городов, которые я посещал.<br/>В свободное
-                    время перевожу статьи на <a class="main__link" href="https://wiki.developer.mozilla.org/ru/">MDN</a>.
-                </p>
-                <p class="main__text">
-                    <b>Английский.</b><br/><br/> Свободно читаю статьи на английском языке, смотрю фильмы и видео с субтитрами.
-                </p>
-                <p class="main__text">
-                    <b>О работе.</b><br/><br/> Работаю верстальщиком в REG.RU.
-                </p>
-            </section>
-        </article>
-        <article class="main__section" id="projects">
-            <h2 class="main__title">Кое-что сделал</h2>
-            <section class="main__content">
-                <div id="list_projects"></div>
-            </section>
-        </article>
+        <div class="main__wrapper">
+            <article class="main__section" id="bio">
+                <h2 class="main__title">Кое-что обо мне</h2>
+                <section class="main__content">
+                    <p class="main__text">
+                        Привет!<br/> Нужно кое-что рассказать о себе.
+                    </p>
+                    <p class="main__text">
+                        Поскольку Интернет позволил нам не чувствовать границ мира, всё же нужно сказать, что живу в Орле.
+                    </p>
+                    <p class="main__text">
+                        <b>С чем я работал или работаю?</b><br/><br/> > HTML 5;<br/> > CSS (LESS);<br/> > Vanilla JS;<br/> > VueJS;<br/> > Webpack;<br/> > Gulp;<br/> > Template Toolkit;<br/><br/> Постигаю написание тестов на JEST.<br/> Имею опыт работы
+                        с Figma и Photoshop.<br/>
+                    </p>
+                    <p class="main__text">
+                        Слежу за новостями в сфере дизайна и всё, что с ним связано. Это помогает мне быстро находить общий язык с дизайнерами и лучше понимать макет страницы.<br/> Читаю статьи по различным технологиям.
+                    </p>
+                    <p class="main__text">
+                        <b>Стоит рассказать о хобби.</b><br/><br/> Люблю фотографировать на мобильный телефон и на фотоаппарат, послушать классную музыку и поиграть в PlayStation.<br/> Коллекционирую открытки из городов, которые я посещал.<br/>В свободное
+                        время перевожу статьи на <a class="main__link" href="https://wiki.developer.mozilla.org/ru/">MDN</a>.
+                    </p>
+                    <p class="main__text">
+                        <b>Английский.</b><br/><br/> Свободно читаю статьи на английском языке, смотрю фильмы и видео с субтитрами.
+                    </p>
+                    <p class="main__text">
+                        <b>О работе.</b><br/><br/> Работаю верстальщиком в REG.RU.
+                    </p>
+                </section>
+            </article>
+            <article class="main__section" id="projects">
+                <h2 class="main__title">Кое-что сделал</h2>
+                <section class="main__content">
+                    <div id="list_projects"></div>
+                </section>
+            </article>
+        </div>
     </main>
     <footer class="footer">
-        <article class="social" id="social">
-            <a href="https://github.com/osipovsergey"><img src="../images/icons/github.svg" alt="github" class="social__icon"></a>
-            <a href="https://twitter.com/osipov__s"><img src="../images/icons/twitter.svg" alt="twitter" class="social__icon"></a>
-            <a href="https://www.instagram.com/osipov__s"><img src="../images/icons/instagram.svg" alt="instagram" class="social__icon"></a>
-            <a href="mailto:osipovsergei97@gmail.com"><img src="../images/icons/mail.svg" alt="mail" class="social__icon"></a>
-        </article>
-        <article class="metric" id="social">
-            <span class="metric__text">Какие-либо метрики на сайте отсутствуют.</span>
-        </article>
+        <div class="footer__wrapper">
+            <article class="social">
+                <a href="https://github.com/osipovsergey"><img src="../images/icons/github.svg" alt="github" class="social__icon"></a>
+                <a href="https://twitter.com/osipov__s"><img src="../images/icons/twitter.svg" alt="twitter" class="social__icon"></a>
+                <a href="https://www.instagram.com/osipov__s"><img src="../images/icons/instagram.svg" alt="instagram" class="social__icon"></a>
+                <a href="mailto:osipovsergei97@gmail.com"><img src="../images/icons/mail.svg" alt="mail" class="social__icon"></a>
+            </article>
+            <article class="metric" id="social">
+                <span class="metric__text">Какие-либо метрики на сайте отсутствуют.</span>
+            </article>
+        </div>
     </footer>
 </body>
 
