--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -35,10 +35,10 @@
                 <h2 class="main__title">Кое-что обо мне</h2>
                 <section class="main__content">
                     <p class="main__text">
-                        Привет!<br/> Нужно кое-что рассказать о себе.
+                        Привет!<br/> Расскажу кое-что о себе.
                     </p>
                     <p class="main__text">
-                        Поскольку Интернет позволил нам не чувствовать границ мира, всё же нужно сказать, что живу в Орле.
+                        Поскольку Интернет позволил нам не чувствовать границ мира, всё же стоит сказать, что живу в Орле.
                     </p>
                     <p class="main__text">
                         <b>С чем я работал или работаю?</b><br/><br/> > HTML 5;<br/> > CSS (LESS);<br/> > Vanilla JS;<br/> > VueJS;<br/> > Webpack;<br/> > Gulp;<br/> > Template Toolkit;<br/><br/> Постигаю написание тестов на JEST.<br/> Имею опыт работы
