--- a/src/less/styles/main.less
+++ b/src/less/styles/main.less
@@ -138,10 +138,25 @@
     margin-bottom: 12px;
     justify-content: center;
 
+    .tablet({
+        margin-bottom: 0;
+    });
+
+    &__link {
+        margin-right: 18px;
+
+        &:nth-child(1) {
+            margin-left: 18px;
+
+            .tablet({
+                margin-left: 0;
+            });
+        }
+    }
+
     &__icon {
         width: 50px;
         height: 50px;
-        margin-right: 18px;
     }
 }
 
