--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -34,27 +34,78 @@
                 <h2 class="main__title">Кое-что обо мне</h2>
                 <section class="main__content">
                     <p class="main__text">
-                        Привет!<br/> Расскажу кое-что о себе.
+                        Привет!
                     </p>
-                    <p class="main__text">
+                    <span class="main__text">
+                        Расскажу кое-что о себе.
+                    </span>
+                    <span class="main__text">
                         Поскольку Интернет позволил нам не чувствовать границ мира, всё же стоит сказать, что живу в Орле.
+                    </span>
+                    <p class="main__subtitle">
+                        С чем я работал или работаю?
+                    </p>
+                    <ul class="main__list">
+                        <li class="main__list-item main__list-item_html">
+                            <span class="main__list-item__text">HTML 5;</span>
+                        </li>
+                        <li class="main__list-item main__list-item_css">
+                            <span class="main__list-item__text">CSS (LESS);</span>
+                        </li>
+                        <li class="main__list-item main__list-item_js">
+                            <span class="main__list-item__text">Vanilla JS;</span>
+                        </li>
+                        <li class="main__list-item main__list-item_vuejs">
+                            <span class="main__list-item__text">VueJS;</span>
+                        </li>
+                        <li class="main__list-item main__list-item_webpack">
+                            <span class="main__list-item__text">Webpack;</span>
+                        </li>
+                        <li class="main__list-item main__list-item_gulp">
+                            <span class="main__list-item__text">Gulp;</span>
+                        </li>
+                        <li class="main__list-item main__list-item_tt">
+                            <span class="main__list-item__text">Template Toolkit;</span>
+                        </li>
+                        <li class="main__list-item main__list-item_bem">
+                            <span class="main__list-item__text">BEM.</span>
+                        </li>
+                    </ul>
+                    <p class="main__text">
+                        Постигаю написание тестов на JEST.
                     </p>
                     <p class="main__text">
-                        <b>С чем я работал или работаю?</b><br/><br/> > HTML 5;<br/> > CSS (LESS);<br/> > Vanilla JS;<br/> > VueJS;<br/> > Webpack;<br/> > Gulp;<br/> > Template Toolkit;<br/><br/> Постигаю написание тестов на JEST.<br/> Имею опыт работы
-                        с Figma и Photoshop.<br/>
+                        Имею опыт работы с Figma и Photoshop.
                     </p>
                     <p class="main__text">
-                        Слежу за новостями в сфере дизайна и всё, что с ним связано. Это помогает мне быстро находить общий язык с дизайнерами и лучше понимать макет страницы.<br/> Читаю статьи по различным технологиям.
+                        Слежу за новостями в сфере дизайна и всё, что с ним связано. Это помогает мне быстро находить общий язык с дизайнерами и лучше понимать макет страницы.
+                    </p>
+                    <span class="main__text">
+                        Читаю статьи по различным технологиям.
+                    </span>
+                    <p class="main__subtitle">
+                        Стоит рассказать о хобби.
                     </p>
                     <p class="main__text">
-                        <b>Стоит рассказать о хобби.</b><br/><br/> Люблю фотографировать на мобильный телефон и на фотоаппарат, послушать классную музыку и поиграть в PlayStation.<br/> Коллекционирую открытки из городов, которые я посещал.<br/>В свободное
-                        время перевожу статьи на <a class="main__link" href="https://wiki.developer.mozilla.org/ru/">MDN</a>.
+                        Люблю фотографировать на мобильный телефон и на фотоаппарат, послушать классную музыку и поиграть в PlayStation.
+                    </p>
+                    <span class="main__text">
+                        Коллекционирую открытки из городов, которые я посещал.
+                    </span>
+                    <span class="main__text">
+                        В свободное время перевожу статьи на <a class="main__link" href="https://wiki.developer.mozilla.org/ru/">MDN</a>.
+                    </span>
+                    <p class="main__subtitle">
+                        Английский.
                     </p>
                     <p class="main__text">
-                        <b>Английский.</b><br/><br/> Свободно читаю статьи на английском языке, смотрю фильмы и видео с субтитрами.
+                        Свободно читаю статьи на английском языке, смотрю фильмы и видео с субтитрами.
+                    </p>
+                    <p class="main__subtitle">
+                        О работе.
                     </p>
                     <p class="main__text">
-                        <b>О работе.</b><br/><br/> Работаю верстальщиком в REG.RU.
+                        Работаю верстальщиком в REG.RU.
                     </p>
                 </section>
             </article>
