--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -47,28 +47,28 @@
                     </p>
                     <ul class="main__list">
                         <li class="main__list-item main__list-item_html">
-                            <span class="main__list-item__text">HTML 5;</span>
+                            <span class="main__list-item__text">HTML 5</span>
                         </li>
                         <li class="main__list-item main__list-item_css">
-                            <span class="main__list-item__text">CSS (LESS);</span>
+                            <span class="main__list-item__text">CSS (LESS)</span>
                         </li>
                         <li class="main__list-item main__list-item_js">
-                            <span class="main__list-item__text">Vanilla JS;</span>
+                            <span class="main__list-item__text">Vanilla JS</span>
                         </li>
                         <li class="main__list-item main__list-item_vuejs">
-                            <span class="main__list-item__text">VueJS;</span>
+                            <span class="main__list-item__text">VueJS</span>
                         </li>
                         <li class="main__list-item main__list-item_webpack">
-                            <span class="main__list-item__text">Webpack;</span>
+                            <span class="main__list-item__text">Webpack</span>
                         </li>
                         <li class="main__list-item main__list-item_gulp">
-                            <span class="main__list-item__text">Gulp;</span>
+                            <span class="main__list-item__text">Gulp</span>
                         </li>
                         <li class="main__list-item main__list-item_tt">
-                            <span class="main__list-item__text">Template Toolkit;</span>
+                            <span class="main__list-item__text">Template Toolkit</span>
                         </li>
                         <li class="main__list-item main__list-item_bem">
-                            <span class="main__list-item__text">BEM.</span>
+                            <span class="main__list-item__text">BEM</span>
                         </li>
                     </ul>
                     <p class="main__text">
