--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -17,7 +17,7 @@
                 <img src="../images/main__image.jpg" alt="main__image" class="header__image">
                 <div class="header__content-text">
                     <h1 class="header__title">Осипов Сергей</h1>
-                    <h2 class="header__desc">Front-end developer</h2>
+                    <h2 class="header__desc">Front-end разработчик</h2>
                 </div>
             </article>
             <nav class="header__navigation">
@@ -84,7 +84,7 @@
                         Читаю статьи по различным технологиям.
                     </span>
                     <p class="main__subtitle">
-                        Стоит рассказать о хобби.
+                        О хобби.
                     </p>
                     <p class="main__text">
                         Люблю фотографировать на мобильный телефон и на фотоаппарат, послушать классную музыку и поиграть в PlayStation.
@@ -99,7 +99,7 @@
                         Английский.
                     </p>
                     <p class="main__text">
-                        Свободно читаю статьи на английском языке, смотрю фильмы и видео с субтитрами.
+                        Читаю статьи на английском языке, смотрю фильмы и видео с субтитрами.
                     </p>
                     <p class="main__subtitle">
                         О работе.
